<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.1.1</version>
        <relativePath/>
    </parent>

    <groupId>net.warp-scores</groupId>
    <artifactId>warpscores</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <packaging>pom</packaging>

    <name>warpscores</name>
    <description>Spike-like Facade for Cyanide BB3-API</description>

    <properties>
        <java.version>25</java.version>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <lombok.version>1.18.46</lombok.version>
        <argLine></argLine>
    </properties>
    <scm>
           <developerConnection>scm:git:git@github.com:dennisgranasen/cyanidebowl.git</developerConnection>
           <connection>scm:git:https://github.com/dennisgranasen/cyanidebowl.git</connection>
           <url>https://github.com/dennisgranasen/cyanidebowl</url>
        <tag>HEAD</tag>
    </scm>
    <profiles>
        <profile>
            <id>server</id>
            <modules>
                <module>cyanide-api</module>
                <module>api</module>
                <module>backend</module>
            </modules>
        </profile>
        <profile>
            <id>dev</id>
            <modules>
                <module>cyanide-api</module>
                <module>api</module>
                <module>backend</module>
            </modules>
        </profile>
        <profile>
            <id>fetcher</id>
            <modules>
                <module>cyanide-api</module>
                <module>api</module>
                <module>backend</module>
            </modules>
        </profile>
        <profile>
            <id>frontend</id>
            <modules>
                <module>frontend</module>
            </modules>
        </profile>
        <profile>
            <id>discord-bot</id>
            <modules>
                <module>discord-bot</module>
            </modules>
        </profile>
        <profile>
            <id>all</id>
            <modules>
                <module>cyanide-api</module>
                <module>api</module>
                <module>backend</module>
                <module>frontend</module>
                <module>discord-bot</module>
            </modules>
        </profile>
    </profiles>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.thymeleaf.extras</groupId>
                <artifactId>thymeleaf-extras-springsecurity6</artifactId>
                <version>3.1.2.RELEASE</version>
            </dependency>
            <dependency>
                <groupId>nz.net.ultraq.thymeleaf</groupId>
                <artifactId>thymeleaf-layout-dialect</artifactId>
                <version>3.3.0</version>
            </dependency>
            <!-- retry and load balancing -->
            <dependency>
                <groupId>com.bucket4j</groupId>
                <artifactId>bucket4j-core</artifactId>
                <version>8.3.0</version>
            </dependency>

            <!-- for laziness -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.code.findbugs</groupId>
                <artifactId>jsr305</artifactId>
                <version>3.0.2</version>
            </dependency>

            <!-- json/xml -->
            <dependency>
                <groupId>com.fasterxml.uuid</groupId>
                <artifactId>java-uuid-generator</artifactId>
                <version>5.1.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <compilerArgs>
                            <arg>-parameters</arg>
                        </compilerArgs>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                    <version>3.15.0</version>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <excludes>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </exclude>
                        </excludes>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.3.1</version>
                    <configuration>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <argLine>@{argLine} -javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>com.github.eirslett</groupId>
                    <artifactId>frontend-maven-plugin</artifactId>
                    <version>1.12.1</version>
                </plugin>
                <plugin>
                    <groupId>com.spotify</groupId>
                    <artifactId>dockerfile-maven-plugin</artifactId>
                    <version>1.4.13</version>
                    <configuration>
                        <skip>${skipDocker}</skip>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>buildnumber-maven-plugin</artifactId>
                    <version>3.2.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <distributionManagement>
        <repository>
            <id>gitlab-maven-releases</id>
            <name>warp-scores releases</name>
            <url>${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/maven/releases</url>
        </repository>
        <snapshotRepository>
            <id>gitlab-maven-snapshots</id>
            <name>warp-scores snapshots</name>
            <url>${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/maven/snapshots</url>
        </snapshotRepository>
    </distributionManagement>
</project>
